# sr-linux-mclag

./: .gitignore  README.md  pyproject.toml
monitoring/: docker-compose.yaml
monitoring/configs/gnmic/: gnmic.yaml
monitoring/configs/grafana/: datasource_prometheus.yaml  leaf1_dashboard.json  leaf1_dashboard.yaml
monitoring/configs/prometheus/: prometheus.yaml
tests/: conftest.py  constants.py  helpers.py  inventory.py  models.py  test_bgp.py  test_interfaces.py
topology/: topology.clab.yaml
topology/configs/: client1.cfg  client2.cfg  leaf1.cfg  leaf2.cfg  leaf3.cfg  spine1.cfg  spine2.cfg
