[project]
name = "sr-linux-mclag"
version = "0.1.0"
description = "Discover how to deploy MC-LAG topology based on SR-Linux with Containerlab and test it with Python. Read more here - https://wandernets.com/tag/sr-linux-mc-lag-series/"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygnmi>=0.8.15",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
]
